Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91196

Locale QML documetnation lists misspelled property

XMLWordPrintable

    • 3670395af58f21f203ce2289a04feef7c6de53f5 (qt/qtdeclarative/dev) aa90901c4f1873b325580fff8c201e17826d2eaa (qt/qtdeclarative/6.0) 85e622f8637c93c7fa54efc905e13534af507e59 (qt/qtdeclarative/6.1) 8d4ceba0cf (qt/tqtc-qtdeclarative/5.15-opensource)

      The Locale QML documentation says there is a property called NumberOption although it is actually numberOptions same as in QLocale. Furthermore it is missing a list of all possible enumeration values.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            henning Henning Gründl
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes