docs: Fix documentation of the Locale numberOptions property

Document the property not the enum type.

Fixes: QTBUG-91196
Change-Id: Id11a436caf1c683a0e70a1b8e8ce86c6118725d8
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 3670395af58f21f203ce2289a04feef7c6de53f5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>